# title_caser

./: .coverage  .gitignore  pyproject.toml  requirements_dev.txt  setup.cfg
src/title_caser/: hardcoded_words.py  styler.py
tests/: test_hyphen_logic.py  test_title_caser.py
