[metadata]
name = title_caser
version = 0.0.0
author = Cangyuan Li
author_email = everest229@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CangyuanLi/title_caser
project_urls =
    Bug Tracker = https://github.com/CangyuanLi/title_caser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
cutils = py.typed
